<resources>
    <string name="app_name">Running</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_no_account"><u>Don\'t have an account ? Sign up now</u></string>
    <string name="login_title">Login</string>
    <string name="login_btn_login">Login</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_have_an_account"><u>You have an account ? Sign in now</u></string>
    <string name="register_title">Register</string>
    <string name="register_btn_register">Register</string>
    <string name="record">Record</string>
    <string name="history">History</string>
    <string name="time">Time</string>
    <string name="average_speed">Average speed</string>
    <string name="distance">Distance</string>
    <string name="km_per_h">km/h</string>
    <string name="km">km</string>
    <string name="n_km">%s km</string>
    <string name="value_elevation_gain">%s m</string>
    <string name="stop_tracking_alert_title">Are you sure ?</string>
    <string name="stop_tracking_alert_description">Do you want to stop your tracking ? You will not able to continue this tracking.</string>
    <string name="stop_tracking_alert_confirm">Save</string>
    <string name="stop_tracking_alert_neutral">Quit without saving</string>
    <string name="stop_tracking_alert_cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="saving_run_notification_title">Run uploaded</string>
    <string name="saving_run_notification_description">You can now watch your run summary</string>
    <string name="saving_run_notification_description_data">You ran for %s at a speed of %f km/h</string>
    <string name="saving_run_channel_id">Upload run</string>
    <string name="saving_run_channel_title">@string/saving_run_channel_id</string>
    <string name="saving_run_channel_description">@string/saving_run_channel_id</string>
    <string name="elevation_gain">Elevation gain</string>
    <string name="run_deleted">Run deleted</string>
    <string name="undo">Undo</string>
    <string name="error_run_deleted">Error while we delete the run</string>
    <string name="max_altitude">Max altitude</string>
    <string name="value_max_altitude">%s m</string>
    <string name="max_speed">Max speed</string>
    <string name="value_max_speed">%s km/h</string>
    <string name="user_location_permission_not_granted">You must accept location permission to track your run</string>
    <string name="exit">Exit</string>
    <string name="open_settings">Open settings</string>
    <string name="user_location_permission_not_granted_title">Location permission disabled</string>
    <string name="user_location_permission_not_granted_description">To record your run, we need to access to your location, if you didn\'t accept permission, you will not be able to access to this feature.</string>
    <string name="no_result_title">No result</string>
    <string name="no_result_description">Your history is empty, start running, and analyze your results</string>
    <string name="no_result_action">Start running</string>
    <string name="logout">Logout</string>
    <string name="run_detail">Run detail</string>
    <string name="delete_run">Delete run</string>
</resources>
